--- a/Docker/index.html
+++ b/Docker/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="background-color: aqua;">
-    <h1>Test CI</h1>
+    <h1>Test CI pipeline</h1>
     <p>Version: v1</p>
 </body>
 </html>
