--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: aqua;">
+<body style="background-color: rgb(8, 0, 255);">
     <h1>Test CI pipeline</h1>
     <p>Version: v1</p>
 </body>
